--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -15,7 +15,7 @@
           width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
       }
   </style>
-  
+
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -24,6 +24,8 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="http://cesium-quickstart-176901.nitrousapp.com:8080/CesiumDemoSite/demo.js"></script>
+
 </head>
 
 <body>
@@ -34,26 +36,104 @@
 				<h1>Clear Science Inc.</h1>
 				<h2>Object Float Demo</h2>
 			</div>
-		
-			
-			
-			<div class = "col-sm-6">
-			
-				This is a demo of a Clear Science Inc. project designed to model an object float predictions based on data predictions using the Cesium viewer.
-				This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased 
-				functionality will be added to this demonstration. 
-			</div>
-			
-		</div>
 
-			
+
+
+			<div class = "col-sm-6">
+
+				This is a demo of a Clear Science Inc. project designed to model an object float predictions based on data predictions using the Cesium viewer.
+				This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased
+				functionality will be added to this demonstration.
+			</div>
+
+		</div>
+<!-- Test message-->
+
 		<div class = "row">
 		<div class = "col-sm-12">
-		<button>start demo</button>
+		<button id="startDemo">start demo</button>
+      <div id="hello"></div>
 		  <div id="cesiumContainer"></div>
-		  <script>
-			var viewer = new Cesium.Viewer('cesiumContainer');
-		  </script>
+<script>
+document.getElementById("startDemo").addEventListener("click", startViewer);
+
+
+/*
+function startViewer(){
+     var viewer = new Cesium.Viewer('cesiumContainer')
+     var dataSource = Cesium.CzmlDataSource.load(czml);
+      var czml = [
+  {
+    "id" : "document",
+    "name" : "Start Point",
+    "version" : "1.0"
+  },
+  {
+    "id" : "point 1",
+    "name": "point",
+    "position" : {
+      "cartographicDegrees" : [-79.6509,	30.3729, 0]
+    },
+    "point": {
+      "color": {
+        "rgba": [255,0, 200, 255]
+      },
+      "outlineColor": {
+        "rgba": [255,0, 200, 255]
+      },
+      "pixelSize": {
+        "number": 10
+      }
+    }
+  }
+];
+
+  viewer.dataSources.add(dataSource);
+  viewer.zoomTo(dataSource);
+     document.getElementById("cesiumContainer")= viewer;
+
+
+
+
+}
+  */
+
+
+function startViewer(){
+var czml = [
+  {
+    "id" : "document",
+    "name" : "CZML Point",
+    "version" : "1.0"
+  },
+  {
+    "id" : "point 1",
+    "name": "point",
+    "position" : {
+      "cartographicDegrees" : [-79.6509,	30.3729, 0]
+    },
+    "point": {
+      "color": {
+        "rgba": [255,0, 200, 255]
+      },
+      "outlineColor": {
+        "rgba": [255,0, 200, 255]
+      },
+      "pixelSize": {
+        "number": 10
+      }
+    }
+  }
+];
+
+
+var viewer = new Cesium.Viewer('cesiumContainer');
+var dataSource = Cesium.CzmlDataSource.load(czml);
+viewer.dataSources.add(dataSource);
+viewer.zoomTo(dataSource);
+  document.getElementById("cesiumContainer")= viewer;
+  }
+</script>
 		</div>
 	</div>
 </body>
