--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -24,79 +24,37 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="http://cesium-quickstart-176901.nitrousapp.com:8080/CesiumDemoSite/demo.js"></script>
-
 </head>
 
 <body>
-	<div class = "container-fluid">
-		<div class="row">
-			<div class ="col-sm-1"></div>
-			<div class = "col-sm-10">
+	<div class="container">
+
+
+			<div style="font-family:Dotum,Arial,sans-serif">
 				<h1>Clear Science Inc.</h1>
-				<h2>Object Float Demo</h2>
+        <h2>Object Float Demo</h2>
 			</div>
 
 
 
-			<div class = "col-sm-6">
+			<div>
 
-				This is a demo of a Clear Science Inc. project designed to model an object float predictions based on data predictions using the Cesium viewer.
-				This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased
-				functionality will be added to this demonstration.
+			  <blockquote>
+			    <p class="text-info">
+This is a demo of a Clear Science Inc. project designed to model an object's float predictions based on data predictions using the Cesium viewer. This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased functionality will be added to this demonstration.
+			    </p>
+			  </blockquote>
 			</div>
 
-		</div>
-<!-- Test message-->
 
-		<div class = "row">
-		<div class = "col-sm-12">
-		<button id="startDemo">start demo</button>
-      <div id="hello"></div>
+
+
+
+
+		  <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
 		  <div id="cesiumContainer"></div>
-<script>
-document.getElementById("startDemo").addEventListener("click", startViewer);
-
-
-/*
-function startViewer(){
-     var viewer = new Cesium.Viewer('cesiumContainer')
-     var dataSource = Cesium.CzmlDataSource.load(czml);
-      var czml = [
-  {
-    "id" : "document",
-    "name" : "Start Point",
-    "version" : "1.0"
-  },
-  {
-    "id" : "point 1",
-    "name": "point",
-    "position" : {
-      "cartographicDegrees" : [-79.6509,	30.3729, 0]
-    },
-    "point": {
-      "color": {
-        "rgba": [255,0, 200, 255]
-      },
-      "outlineColor": {
-        "rgba": [255,0, 200, 255]
-      },
-      "pixelSize": {
-        "number": 10
-      }
-    }
-  }
-];
-
-  viewer.dataSources.add(dataSource);
-  viewer.zoomTo(dataSource);
-     document.getElementById("cesiumContainer")= viewer;
-
-
-
-
-}
-  */
+		  <script>
+			document.getElementById("startDemo").addEventListener("click", startViewer);
 
 
 function startViewer(){
@@ -133,9 +91,15 @@ viewer.dataSources.add(dataSource);
 viewer.zoomTo(dataSource);
   document.getElementById("cesiumContainer")= viewer;
   }
-</script>
-		</div>
+		  </script>
+
 	</div>
+  <br>
+  <br>
+  <br>
 </body>
+  <footer>
+    <div>copyright info here</div>
+    </footer>
 </html>
 
