CZML working inline

--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -75,7 +75,7 @@
     <!-- This is the main script to run the Cesium viewer and load initial CZML
         TODO: place this in separate script file and reference-->
   <script>
-   var viewer=Cesium.Viewer('cesiumContainer');
+   var viewer= new Cesium.Viewer('cesiumContainer');
 
 
 document.getElementById("startDemo").addEventListener("click", startViewer);
