--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -16,16 +16,15 @@
   <style>
       @import url(../Build/Cesium/Widgets/widgets.css);
       html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
+          width: 50% height: 50%; margin: 0; padding: 0; overflow: hidden;
       }
     #overlay {
-    display: block;
-		color : #FFFFFF;
-		top : 250px;
-		left : 300px;
-        position :static;
-		z-index : 1;
+    display: block; color : #FFFFFF; top : 250px;	left : 300px; position :static;	z-index : 1;
       }
+    body{
+      padding-bottom: 50px;
+    }
+
   </style>
 
   <!-- Latest compiled and minified CSS -->
@@ -40,47 +39,36 @@
 
 <body>
 	<div class="container">
-
-
 			<div style="font-family:Dotum,Arial,sans-serif">
 				<h1>Clear Science Inc.</h1>
         <h2>Object Float Demo</h2>
 			</div>
-
-
-
       <div class = "text-info">
         <blockquote>
-            This is a demo of a Clear Science Inc. project designed to visually display an object's predicted float path based on data modeling algorithms using the Cesium viewer.
-            This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, more data will be made available for
-            the user. This application is being developed as part of an internshp project by Jeff Janda and Veronica Washington.
+            This is a demo of a Clear Science Inc. project designed to visually display an object's predicted
+            float path based on data modeling algorithms using the Cesium viewer. This uses only controlled data
+            to show what future functionality of this application will be able to do. As this project develops,
+            more data will be made available for the user. This application is being developed as part of an
+            internshp project by Jeff Janda and Veronica Washington.
         </blockquote>
       </div>
-
-
-
-
-
-
       <div id="overlay"><button type="button" id="startDemo" class="btn btn-primary">Start Demo</button></div>
 		  <div id="cesiumContainer"></div>
 
-
-
 	</div>
-  <br>
-  <br>
-  <br>
+
+  <br/>
+  <br/>
+
+  <br/>
 
     <!-- This is the main script to run the Cesium viewer and load initial CZML
         TODO: place this in separate script file and reference-->
   <script>
-   var viewer= new Cesium.Viewer('cesiumContainer');
+  var viewer= new Cesium.Viewer('cesiumContainer');
 
 
 document.getElementById("startDemo").addEventListener("click", startViewer);
-
-
 
 function startViewer(){
   var czml = [
@@ -114,12 +102,9 @@ function startViewer(){
   var dataSource = Cesium.CzmlDataSource.load(czml);
   viewer.dataSources.add(dataSource);
   viewer.zoomTo(dataSource);
-  document.getElementById("cesiumContainer")=viewer;
+
 }
-	</script>
-
-
+  </script>
 </body>
-
 </html>
 
