--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -8,23 +8,12 @@
   <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>Object Float Demo</title>
-  <script src="/Build/Cesium/Cesium.js"></script>
-  <!--<script src="/CesiumDemoSite/demo.js"></script>-->
-
-  <!-- This is custom styling added to the page
-       TODO: Add this into a separate stylesheet from source-->
+  <script src="../Build/Cesium/Cesium.js"></script>
   <style>
       @import url(../Build/Cesium/Widgets/widgets.css);
       html, body, #cesiumContainer {
-          width: 50% height: 50%; margin: 0; padding: 0; overflow: hidden;
+          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
       }
-    #overlay {
-    display: block; color : #FFFFFF; top : 250px;	left : 300px; position :static;	z-index : 1;
-      }
-    body{
-      padding-bottom: 50px;
-    }
-
   </style>
 
   <!-- Latest compiled and minified CSS -->
@@ -39,72 +28,79 @@
 
 <body>
 	<div class="container">
+
+
 			<div style="font-family:Dotum,Arial,sans-serif">
 				<h1>Clear Science Inc.</h1>
         <h2>Object Float Demo</h2>
 			</div>
-      <div class = "text-info">
-        <blockquote>
-            This is a demo of a Clear Science Inc. project designed to visually display an object's predicted
-            float path based on data modeling algorithms using the Cesium viewer. This uses only controlled data
-            to show what future functionality of this application will be able to do. As this project develops,
-            more data will be made available for the user. This application is being developed as part of an
-            internshp project by Jeff Janda and Veronica Washington.
-        </blockquote>
-      </div>
-      <div id="overlay"><button type="button" id="startDemo" class="btn btn-primary">Start Demo</button></div>
+
+
+
+			<div>
+
+			  <blockquote>
+			    <p class="text-info">
+This is a demo of a Clear Science Inc. project designed to model an object's float predictions based on data predictions using the Cesium viewer. This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased functionality will be added to this demonstration.
+			    </p>
+			  </blockquote>
+			</div>
+
+
+
+
+
+    <div>
+		  <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
 		  <div id="cesiumContainer"></div>
-
-	</div>
-
-  <br/>
-  <br/>
-
-  <br/>
-
-    <!-- This is the main script to run the Cesium viewer and load initial CZML
-        TODO: place this in separate script file and reference-->
-  <script>
-  var viewer= new Cesium.Viewer('cesiumContainer');
-
-
+    </div>
+<script>
+var viewer = Cesium.Viewer('cesiumContainer');
 document.getElementById("startDemo").addEventListener("click", startViewer);
 
+
 function startViewer(){
-  var czml = [
-    {
-      "id" : "document",
-      "name" : "CZML Point",
-      "version" : "1.0"
+var czml = [
+  {
+    "id" : "document",
+    "name" : "CZML Point",
+    "version" : "1.0"
+  },
+  {
+    "id" : "point 1",
+    "name": "point",
+    "position" : {
+      "cartographicDegrees" : [-79.6509,	30.3729, 0]
     },
-    {
-      "id" : "point 1",
-      "name": "point",
-      "position" : {
-        "cartographicDegrees" : [-79.6509,	30.3729, 0]
+    "point": {
+      "color": {
+        "rgba": [255,0, 200, 255]
       },
-      "point": {
-        "color": {
-          "rgba": [255,0, 0, 255]
-        },
-        "outlineColor": {
-          "rgba": [255,0, 200, 255]
-        },
-        "pixelSize": {
-          "number": 10
-        }
+      "outlineColor": {
+        "rgba": [255,0, 200, 255]
+      },
+      "pixelSize": {
+        "number": 10
       }
     }
-  ];
+  }
+];
 
 
 
-  var dataSource = Cesium.CzmlDataSource.load(czml);
-  viewer.dataSources.add(dataSource);
-  viewer.zoomTo(dataSource);
-
+var dataSource = Cesium.CzmlDataSource.load(czml);
+viewer.dataSources.add(dataSource);
+viewer.zoomTo(dataSource);
 }
-  </script>
+		  </script>
+
+	</div>
+  <br>
+  <br>
+  <br>
 </body>
+  <footer>
+    <div>copyright info here</div>
+    </footer>
 </html>
 
