--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -55,52 +55,54 @@ This is a demo of a Clear Science Inc. project designed to model an object's flo
 		  <div id="cesiumContainer"></div>
     </div>
 <script>
-var viewer = Cesium.Viewer('cesiumContainer');
+var viewer= new Cesium.Viewer('cesiumContainer');
+
+
 document.getElementById("startDemo").addEventListener("click", startViewer);
 
 
+
 function startViewer(){
-var czml = [
-  {
-    "id" : "document",
-    "name" : "CZML Point",
-    "version" : "1.0"
-  },
-  {
-    "id" : "point 1",
-    "name": "point",
-    "position" : {
-      "cartographicDegrees" : [-79.6509,	30.3729, 0]
+  var czml = [
+    {
+      "id" : "document",
+      "name" : "CZML Point",
+      "version" : "1.0"
     },
-    "point": {
-      "color": {
-        "rgba": [255,0, 200, 255]
+    {
+      "id" : "point 1",
+      "name": "point",
+      "position" : {
+        "cartographicDegrees" : [-79.6509,	30.3729, 0]
       },
-      "outlineColor": {
-        "rgba": [255,0, 200, 255]
-      },
-      "pixelSize": {
-        "number": 10
+      "point": {
+        "color": {
+          "rgba": [255,0, 0, 255]
+        },
+        "outlineColor": {
+          "rgba": [255,0, 200, 255]
+        },
+        "pixelSize": {
+          "number": 10
+        }
       }
     }
-  }
-];
+  ];
 
 
 
-var dataSource = Cesium.CzmlDataSource.load(czml);
-viewer.dataSources.add(dataSource);
-viewer.zoomTo(dataSource);
+  var dataSource = Cesium.CzmlDataSource.load(czml);
+  viewer.dataSources.add(dataSource);
+  viewer.zoomTo(dataSource);
+  document.getElementById("cesiumContainer")=viewer;
 }
-		  </script>
+</script>
 
 	</div>
   <br>
   <br>
   <br>
 </body>
-  <footer>
-    <div>copyright info here</div>
-    </footer>
+
 </html>
 
