--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -12,7 +12,7 @@
   <style>
       @import url(../Build/Cesium/Widgets/widgets.css);
       html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
+          width: 100%; height: 100%; margin: 0; padding: 0; overflow: auto;
       }
   </style>
 
@@ -27,82 +27,68 @@
 </head>
 
 <body>
-	<div class="container">
 
+	<div class="container">
 
 			<div style="font-family:Dotum,Arial,sans-serif">
 				<h1>Clear Science Inc.</h1>
         <h2>Object Float Demo</h2>
 			</div>
 
-
-
-			<div>
-
-			  <blockquote>
-			    <p class="text-info">
-This is a demo of a Clear Science Inc. project designed to model an object's float predictions based on data predictions using the Cesium viewer. This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased functionality will be added to this demonstration.
-			    </p>
-			  </blockquote>
+			<div class="text-info">
+        This is a demo of a Clear Science Inc. project designed to model an object's float predictions
+        based on data predictions using the Cesium viewer. This uses only controlled data to show what
+        future functionality of this application will be able to do. As this project develops, increased
+        functionality will be added to this demonstration.
 			</div>
 
+      <div>
+        <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
+        <div id="cesiumContainer"></div>
+      </div>
+
+      <script>
+        var viewer= new Cesium.Viewer('cesiumContainer');
+
+        document.getElementById("startDemo").addEventListener("click", startViewer);
+
+        function startViewer(){
+          var czml = [
+            {
+              "id" : "document",
+              "name" : "CZML Point",
+              "version" : "1.0"
+            },
+            {
+              "id" : "point 1",
+              "name": "point",
+              "position" : {
+                "cartographicDegrees" : [-79.6509,	30.3729, 0]
+              },
+              "point": {
+                "color": {
+                  "rgba": [255,0, 0, 255]
+                },
+                "outlineColor": {
+                  "rgba": [255,0, 200, 255]
+                },
+                "pixelSize": {
+                  "number": 10
+                }
+              }
+            }
+          ];
 
 
 
-
-    <div>
-		  <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
-		  <div id="cesiumContainer"></div>
-    </div>
-<script>
-var viewer= new Cesium.Viewer('cesiumContainer');
-
-
-document.getElementById("startDemo").addEventListener("click", startViewer);
-
-
-
-function startViewer(){
-  var czml = [
-    {
-      "id" : "document",
-      "name" : "CZML Point",
-      "version" : "1.0"
-    },
-    {
-      "id" : "point 1",
-      "name": "point",
-      "position" : {
-        "cartographicDegrees" : [-79.6509,	30.3729, 0]
-      },
-      "point": {
-        "color": {
-          "rgba": [255,0, 0, 255]
-        },
-        "outlineColor": {
-          "rgba": [255,0, 200, 255]
-        },
-        "pixelSize": {
-          "number": 10
+          var dataSource = Cesium.CzmlDataSource.load(czml);
+          viewer.dataSources.add(dataSource);
+          viewer.zoomTo(dataSource);
+          document.getElementById("cesiumContainer")=viewer;
         }
-      }
-    }
-  ];
+      </script>
 
-
-
-  var dataSource = Cesium.CzmlDataSource.load(czml);
-  viewer.dataSources.add(dataSource);
-  viewer.zoomTo(dataSource);
-  document.getElementById("cesiumContainer")=viewer;
-}
-</script>
-
-	</div>
-  <br>
-  <br>
-  <br>
-</body>
-
+    </div>
+  </body>
 </html>
 
