select cartographic degrees from viewer and pass to page

--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -41,6 +41,8 @@
         future functionality of this application will be able to do. As this project develops, increased
         functionality will be added to this demonstration.
 			</div>
+    <div id="lat"></div>
+    <div id="lon"></div>
 
       <div>
         <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
