--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -12,10 +12,10 @@
   <style>
       @import url(../Build/Cesium/Widgets/widgets.css);
       html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
+          width: 100%; height: 100%; margin: 0; padding: 0; overflow: auto;
       }
   </style>
-  
+
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -24,37 +24,39 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+ <!-- Angular library -->
+     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+
 </head>
 
-<body>
-	<div class = "container-fluid">
+<body ng-app="ngCesium">
+	<div class = "container">
 		<div class="row">
 			<div class ="col-sm-1"></div>
 			<div class = "col-sm-10">
 				<h1>Clear Science Inc.</h1>
 				<h2>Object Float Demo</h2>
 			</div>
-		
-			
-			
+
+
+
 			<div class = "col-sm-6">
-			
+
 				This is a demo of a Clear Science Inc. project designed to model an object float predictions based on data predictions using the Cesium viewer.
-				This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased 
-				functionality will be added to this demonstration. 
+				This uses only controlled data to show what future functionality of this application will be able to do. As this project develops, increased
+				functionality will be added to this demonstration.
 			</div>
-			
+
 		</div>
 
-			
-		<div class = "row">
-		<div class = "col-sm-12">
-		<button>start demo</button>
-		  <div id="cesiumContainer"></div>
-		  <script>
-			var viewer = new Cesium.Viewer('cesiumContainer');
-		  </script>
-		</div>
+
+
+
+ <div ng-controller="appCtrl as appCtrl">
+      <div cesium-directive="" id="cesium1" class="cesiumContainer"></div>
+    </div>
+    <script src="js/app.js"></script>
 	</div>
 </body>
 </html>
