viewer displays lat and lon and passes values to the form

--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -65,7 +65,8 @@
 
       <div ng-controller="cesiumCtrl as cesiumCtrl">
         <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
-         <div cesium-directive="" id="cesium1" class="cesiumContainer"></div>
+         <div cesium-directive id="cesium1" class="cesiumContainer"></div>
+
       <div id="cesiumContainer"></div>
       </div>
 
