--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -67,7 +67,7 @@
         <button type="button" id="startDemo" class="btn btn-primary">Start Demo</button>
          <div cesium-directive id="cesium1" class="cesiumContainer"></div>
 
-      <div id="cesiumContainer"></div>
+<!--       <div id="cesiumContainer"></div> -->
       </div>
 
 <form name="form" novalidate ng-controller="WebsarController" style='margin-top: 50px;'>
@@ -194,10 +194,10 @@
             </div>
           </fieldset>
           <br />
-          <div class="col-md-12 form-group" ng-controller="ModalDemoCtrl">
+          <div class="col-md-12 form-group" ng-controller="cesiumCtrl as cesiumCtrl">
 
             <div style="display:inline-block; position:relative;">
-              <button type="submit" class="btn btn-primary btn-lg" ng-disabled="!form.$valid" ng-click="open('lg')">Submit</button>
+              <button type="submit" class="btn btn-primary btn-lg" ng-disabled="!form.$valid" ng-click="init">Submit</button>
               <div uib-tooltip="Missing required fields" ng-show="form.$invalid" style="position:absolute; left:0; right:0; top:0; bottom:0;"></div>
             </div>
 
@@ -235,7 +235,7 @@
 
         </form>
  <script src="js/app.js"></script>
-    <script src="demo.js"></script>
+   <!-- <script src="demo.js"></script>
 
 <!--     <script> (function(){
     angular.module('webForm',
