--- a/CesiumDemoSite/index.html
+++ b/CesiumDemoSite/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>Object Float Demo</title>
   <script src="../Build/Cesium/Cesium.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <style>
       @import url(../Build/Cesium/Widgets/widgets.css);
       html, body, #cesiumContainer {
@@ -20,9 +20,7 @@
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-    <!-- Angular library ***Note this is duplicating downloaded code in js folder!*** -->
-    <!-- Angular 1.4.8 and UI Boostrap 0.14.3 -->
-    <!-- <script src="js/angular.min.js"></script> -->
+
     <script src="js/angular.js"></script>
     <script src="js/angular-messages.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
@@ -49,7 +47,7 @@
 	<div class="container">
 
 
-			<div style="font-family:Dotum,Arial,sans-serif">
+			<div class ="header">
 				<h1>Clear Science Inc.</h1>
         <h2>Object Float Demo</h2>
 			</div>
@@ -60,18 +58,12 @@
         future functionality of this application will be able to do. As this project develops, increased
         functionality will be added to this demonstration.
 			</div>
-    <div id="lat"></div>
-    <div id="lon"></div>
+        <div id="lat"></div>
+        <div id="lon"></div>
 
 
-<!--         <button type="button" id="startDemo" class="btn btn-primary" ng-click="init()">Start Demo</button>
-        <div uib-tooltip="Missing required fields" ng-show="form.$invalid" style="position:absolute; left:0; right:0; top:0; bottom:0;"></div> -->
-         <div cesium-directive id="cesium1" class="cesiumContainer"></div>
-
-<!--       <div id="cesiumContainer"></div> -->
-
-
-<form name="form" novalidate ng-controller="WebsarController" style='margin-top: 50px;'>
+    <button class="button" ng-click="toggleForm()">Enter Object Data</button>
+<form class="col-md-4" name="form"  id= "form" novalidate ng-controller="WebsarController" style='margin-top: 50px;' ng-show="showForm">
 
           <div class="form-group" ng-class="{ 'has-error': form.uObject.$dirty || form.uObject.$invalid}">
             <label>Object:</label>
@@ -237,104 +229,10 @@
         </div>
 
         </form>
-
+         <div cesium-directive id="cesium1" class="cesiumContainer"></div>
 
  <script src="js/app.js"></script>
-   <!-- <script src="demo.js"></script>
 
-<!--     <script> (function(){
-    angular.module('webForm',
-              [
-                'ngMessages',
-                'ngSanitize',
-                'ui.bootstrap'
-        ]);
-
-})();
-
-      (function(){
-  angular.module('webForm')
-        .controller('WebsarController', WebsarController);
-
-  WebsarController.$inject = ['$scope', '$http','ObjectService']
-
-  function WebsarController($scope, $http, ObjectService) {
-    //Object structure to store all categories of objects with the associated flags, icons, and values.
-    //Values are coded with id numbers and name/description
-    $scope.objects = ObjectService.objects;
-    $scope.map = MapService.getMap();
-    $scope.user = MapService.user;
-
-    //Watches for changes in form values for longitudue and re-centers map
-    $scope.$watch('user.latlong', function(oldValue, newValue) {
-        console.log($scope.user)
-        $scope.map.getView().setCenter(ol.proj.fromLonLat([$scope.user.latlong.lon, $scope.user.latlong.lat]));
-      });
-
-    // //Watches for changes in form values for latitude and re-centers map
-    // $scope.$watch('user.latlong.lat', function(oldValue, newValue) {
-    //   $scope.map.getView().setCenter(ol.proj.fromLonLat([$scope.user.latlong.lon, $scope.user.latlong.lat]));
-    // });
-
-    //Pattern used for validating 4 digit military from 0000 to 2359
-    $scope.patterns = {
-      militaryTime: /^(0\d|1\d|2[0-3])([0-5]\d)$/
-    };
-
-    //Function to open uib-datepicker pop-up
-    $scope.open = function($event) {
-      $scope.status.opened = true;
-    };
-
-    //Variable used for uib-datepicker pop-up to display/hide.
-    $scope.status = {
-      opened: false
-    };
-
-    //Toggle function to turn off other collapsable divs if the a new button is clicked and resets object input.
-    //Extra check to make sure the object is reset if a different button is clicked.
-    $scope.toggle = function (object) {
-      $scope.objects.map(function(item){
-        if(item === object){
-          if(item.isCollapsed){
-            item.isCollapsed = false;
-            $scope.user.objectID = '';
-          } else {
-            item.isCollapsed = true;
-            angular.forEach(item.values, function(val){
-              val.isHidden = true;
-            });
-          }
-        }
-      })
-
-    };
-
-
-    //Toggle function to expand and collapse sub radio button menus if they exisit.
-    $scope.toggle2 = function (items) {
-      $scope.objects.map(function(obj){
-        obj.values.map(function(val){
-          if(val === items && val.sub){
-            if(val.isHidden){
-              val.isHidden = false;
-            }
-          } else {
-            val.isHidden = true;
-          }
-        });
-
-      if($scope.user.objectID.slice(0,2) === '-1'){
-        $scope.user.objectID = '';
-      }
-    });
-  };
-
-
-
-  };
-})()
-    </script> -->
 
     </div>
   </body>
